@@ -1,0 +1,7 @@
+package entity;
+
+public interface Shooter {
+
+	void drawShot(Entity target, float progress);
+
+}
